tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__ExtrudeAlltheThi-AAAAAAAAAAAAAAAAAAAC5A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 740,
  "prerequisites": [
    896
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you've hit MV tier, it's time to get a better ratio when making rods, pipes, wires, plates and many more parts. Most extruder recipes use more than 32 EU/t so you need an MV extruder. After crafting the machine you need extruder shapes for the different types of parts you will want to make.\n\nThere are a few more shapes than the ones listed here. Make sure to have a look.\n\n[note]Most of the Tinkers Gregworks tool parts are made in the extruder. They also have long extrusion times to balance out their usefulness.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lExtrude All the Things",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    896
  ],
  "rewards": [],
  "tasks": []
}
