tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__FishOil-AAAAAAAAAAAAAAAAAAAGCA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1544,
  "prerequisites": [
    1324
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Got Fish?\n\n[note]There are rumors of a weird crop in the shape of a fish...\n\nOtherwise look under Fishing Farming Cooking tab for fish catching options.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lFish Oil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1324
  ],
  "rewards": [],
  "tasks": []
}
